src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADUAUserDetails__c</fullName>
        <label>ADUAUserDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accessible_Systems__c</fullName>
        <label>Accessible Systems</label>
        <picklist>
            <picklistValues>
                <fullName>SYS_DOWNLOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYS_ZENDESK</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Activity_Score__c</fullName>
        <formula>IF(mkto2__Lead_Score__c&lt;=0,4, 
IF(AND(mkto2__Lead_Score__c&gt;=1,mkto2__Lead_Score__c&lt;=10),3, 
IF(AND(mkto2__Lead_Score__c&gt;=11,mkto2__Lead_Score__c&lt;=50),2, 
IF(mkto2__Lead_Score__c&gt;50,1,4 
))))</formula>
        <label>Activity Score Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdWords_Keyword__c</fullName>
        <externalId>true</externalId>
        <label>AdWords Keyword</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AppJam_Presentation_Topic__c</fullName>
        <label>AppJam Presentation Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppJam_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AppJam Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppJam_Skill_Level__c</fullName>
        <label>AppJam Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AppJam_Use_Case__c</fullName>
        <label>AppJam Use Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppJam_What_Will_You_Teach__c</fullName>
        <label>AppJam What Will You Teach?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Map_First_Visit__c</fullName>
        <label>App Map First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_Map_Last_Visit__c</fullName>
        <label>App Map Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Stack__c</fullName>
        <label>Application Stack</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_a__c</fullName>
        <label>Are you a</label>
        <picklist>
            <picklistValues>
                <fullName>Cloud Platform Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Ops Ecosystem Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Provider Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Looking for a Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyer_Persona__c</fullName>
        <description>Persona field to determine what the Contact&apos;s Buyer Persona is for marketing purposes</description>
        <label>Buyer Persona</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold__c</fullName>
        <description>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
        <formula>/*the value in this field is compared against the configured Full Circle CRM engagement score*/
/*modify this formula as your company&apos;s engagement threshold changes*/
IF(ISPICKVAL(FCRM__FCR_Status__c,&apos;Unqualified Forever&apos;)||
(Do_Not_MQL__c = TRUE),-2000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
        <label>FCCRM Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Last_Set__c</fullName>
        <description>Most recent update of the Contact Status field. Set with workflow.</description>
        <inlineHelpText>Most recent update of the Contact Status field.</inlineHelpText>
        <label>Status Last Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Exclude_From_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Notes__c</fullName>
        <label>Certification Notes</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email_Domain__c</fullName>
        <label>Company Email Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Search_Phrase__c</fullName>
        <label>Competitor Search Phrase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Business_Type__c</fullName>
        <description>Please enter the primary business relationship type for this contact.</description>
        <label>Contact Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Id_18_digit__c</fullName>
        <description>SFDC 18 digit id for use in LMS integration</description>
        <label>Contact Id 18 digit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Contact Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Position</label>
        <picklist>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevOps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status - OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VoiceMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FollowUp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer at Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Training Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corp_HQ_Phone__c</fullName>
        <label>Corp HQ Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>IP-Based City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <label>IP-Based Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Organization__c</fullName>
        <label>IP-Based Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Id__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Code__c</fullName>
        <label>IP-Based Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_State_Province__c</fullName>
        <label>IP-Based State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Company__c</fullName>
        <formula>Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally</description>
        <inlineHelpText>Cloud MDM: used internally</inlineHelpText>
        <label>Cloud MDM Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <formula>Account.DSE__DS_Legal_Form__c</formula>
        <label>Legal Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Contact data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Contact data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_com_DUNS__c</fullName>
        <formula>Account.DandbCompany.DunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_com_Revenue__c</fullName>
        <formula>Account.DandbCompany.SalesVolume</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <picklist>
            <picklistValues>
                <fullName>DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostgreSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Option__c</fullName>
        <label>Deployment Option</label>
        <picklist>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not QL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Time_Stamp__c</fullName>
        <label>Download Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Line__c</fullName>
        <label>Email Subject Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables App Dynamics Account Access</description>
        <inlineHelpText>Select this value to enable App Dynamics Account access.</inlineHelpText>
        <label>Enable Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Person_RecordType__c</fullName>
        <description>RecordType of related person account if present</description>
        <label>Admin Person RecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Update_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This counter is changed any time this object is updated by the response management system.</description>
        <inlineHelpText>This counter is changed any time this object is updated by the response management system.</inlineHelpText>
        <label>Admin Update Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Created_By_Lead_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to false by default this value is mapped from lead on conversion.</description>
        <inlineHelpText>Set to true if contact was created from lead conversion.</inlineHelpText>
        <label>Created By Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Name_Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Indicates the day the name was created. If contact is created from lead convert, the value will be populated from the lead.</description>
        <label>Name Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Nurture_Timeout__c</fullName>
        <description>Nurture timeout date for this contact.</description>
        <inlineHelpText>Indicates the earliest date this contact can promote out of nurture for follow up.</inlineHelpText>
        <label>Nurture Timeout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_PostAssignNotificationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true to indicate that a notification is pending after assignment of a contact to to receipt of a qualified response.</description>
        <inlineHelpText>Adminstrative field used for scoring and notifications.</inlineHelpText>
        <label>Post Assign Notification Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Prior_Contact_Score__c</fullName>
        <description>Previous contribution of the Contact score field (as defined in configuration) towards the response score.</description>
        <inlineHelpText>The Contact Score prior to the most recent update.</inlineHelpText>
        <label>Prior Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Response score on contact.</description>
        <inlineHelpText>The score of the contact at the time the most recent response was processed.</inlineHelpText>
        <label>Response Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Status_Synced_From_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field that indicates that the status of this contact was set during response sync.</description>
        <label>Status Synced From Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Status__c</fullName>
        <description>The status of the contact.</description>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempting Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Superpower_Field__c</fullName>
        <description>This field will always be cleared after being set. Please see Full Circle CRM Documentation for use of this field.</description>
        <inlineHelpText>This field will always be cleared after being set. Please see Full Circle CRM Documentation for use of this field.</inlineHelpText>
        <label>FCCRM Superpower Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Take_Scoring_Snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to true to score any pending responses for this contact</description>
        <label>Do Pending Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Temp_Lead_Created_Date__c</fullName>
        <description>Administrative Field - Temporary holder for Lead Create Date. Cleared by Full Circle CRM After comparison with the Contact FCR_Name_Created_Date__c field.</description>
        <inlineHelpText>Administrative Field - Temporary holder for Lead Create Date. Cleared by Full Circle CRM After comparison with the Contact FCR_Name_Created_Date__c field.</inlineHelpText>
        <label>Temp Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FreeForm_Download_Time__c</fullName>
        <label>FreeForm Download Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gone_Dark_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox triggers the gone dark renewal campaign that is run by customer success and renewals</description>
        <inlineHelpText>Only check this box if you are part of customer success or renewals</inlineHelpText>
        <label>Gone Dark Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gone_Dark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial Checkbox that starts the gone dark campaign that customer success is running</description>
        <inlineHelpText>Only check this box if you are part of renewals or customer success</inlineHelpText>
        <label>Gone Dark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handraiser_Date__c</fullName>
        <label>Handraiser Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handraiser_Form__c</fullName>
        <label>Handraiser Form</label>
        <picklist>
            <picklistValues>
                <fullName>.NET Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_they_find_us__c</fullName>
        <label>How did they find us?</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Web Source</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sourceforge</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Java Performance Tuning</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>DZone</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stack Overflow</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>High Scalability</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>infoq.com</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google (DoubleClick)</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Website</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google AdWords</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other Web Source</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>AD Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Direct Download</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_AppDynamics__c</fullName>
        <label>How did you hear about AppDynamics?</label>
        <picklist>
            <picklistValues>
                <fullName>Online advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online community/forum mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague/friend referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searched online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Budget__c</fullName>
        <label>IT Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_or_Domestic__c</fullName>
        <label>International or Domestic</label>
        <picklist>
            <picklistValues>
                <fullName>US/ Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMigrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java_Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMS Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Portal_User_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMS_Portal_User_Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Competitor_Search_Phrase__c</fullName>
        <externalId>true</externalId>
        <label>Last Competitor Search Phrase</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Campaign_Date__c</fullName>
        <label>Last Marketing Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Campaign__c</fullName>
        <label>Last Marketing Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Querystring__c</fullName>
        <label>Last Querystring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Search_Phrase__c</fullName>
        <label>Last Search Phrase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Web_Page__c</fullName>
        <label>Last Web Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <label>Lead Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>125</length>
        <type>Text</type>
    </fields>
</CustomObject>